@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Add support for `askpass` helpers.
+
 # Version 0.3.0 - 2023-08-09
 - [change][major] Add optional password parameter to `GitAuthenticator::add_ssh_key_file()`.
 - [add][minor] Add option to prompt for the password of encrypted SSH key files.
